--- a/index.html
+++ b/index.html
@@ -13,5 +13,11 @@
     <!-- Create an iframe tag-->
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d27706.91818538511!2d-95.38529406044923!3d29.767092200000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x509e40b912a03902!2sWeWork+708+Main+Street!5e0!3m2!1sen!2sus!4v1534205500590" width="100%" height="400px" frameborder="1" style="border:0" allowfullscreen></iframe>
 
+
+<p>I am a block element</p>
+<p>I am a block element</p>
+
+<span>I am an inline element</span>
+<span>I am an inline element</span>
   </body>
 </html>
